--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "simpleai",
   "version": "1.0.11",
   "description": "A lib to make making neural networks as easy as possible.",
-  "main": "node/simpleAI-node.js",
+  "main": "node/index.ts",
   "scripts": {
-    "test": "node node/tests/test.js"
+    "test": "node node/tests/test.js",
+    "tsc": "tsc"
   },
   "author": "PinkFluffyLlama",
   "license": "MIT",
@@ -12,5 +13,14 @@
     "type": "git",
     "url": "https://github.com/PinkFlufflyLlama/simpleAI"
   },
-  "keywords": ["ai", "simple", "easy", "neural network", "AI"]
+  "keywords": [
+    "ai",
+    "simple",
+    "easy",
+    "neural network",
+    "AI"
+  ],
+  "dependencies": {
+    "typescript": "^3.8.3"
+  }
 }
